Go cellphone api changes
