# 2022/Go/Cellphone/internal/api/api.go
@@ -1,6 +1,8 @@
 package api
 
 import (
+	"cellphone/internal/api/gin_api"
+	"cellphone/internal/api/nat_api"
 	"cellphone/internal/app_config"
 	"cellphone/internal/repository"
 	"log"
@@ -17,14 +19,14 @@ type ApiHandler interface {
 	Start(config app_config.Main) error
 }
 
-func MakeRoutes(conf app_config.Main, repo *repository.RepositoryService) ApiHandler {
+func NewServer(conf app_config.Main, repo *repository.RepositoryService) ApiHandler {
 	switch conf.ApiType {
 	case API_NAT:
 		log.Println("Starting net/http API")
-		return MakeNatRoutes(repo)
+		return nat_api.NewServer(repo)
 	case API_GIN:
 		log.Println("Starting Gin API")
-		return MakeGinRoutes(repo)
+		return gin_api.NewServer(repo)
 	}
 
 	return nil
